fixed sponsisors on mobile

--- a/wp-content/themes/kmaevent/css/inline.css
+++ b/wp-content/themes/kmaevent/css/inline.css
@@ -708,6 +708,7 @@ header.entry-header h1 {
     color: #2B2B2B;
     text-align: center;
     text-transform: uppercase;
+    margin-top:2rem;
 }
 
 .front-page header.entry-header h1 {
@@ -724,6 +725,7 @@ header.entry-header h1 {
 
     header.entry-header h1 {
         font-size: 3.4em;
+        margin-top:0;
     }
 
 }
